made corrections on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@
     flex-direction: row;
 }
 
+i:hover{
+    color: lightblue;
+}
+
 
 
 
@@ -74,14 +78,14 @@
         flex-direction: column;
     }
     .footer2 {
+        margin-top: 2.5em;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: space-between;
         width: 100%;
         align-items: center;
     }
-    #social-media-links{
-        display: none;
-    }
+
 
 }
 @media screen and (min-width: 1024px) {
@@ -137,4 +141,6 @@ h1 {
     width: 100%;
     align-items: center;
 }
+
+
 }
